<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/ant_feed_bg_color">

    <include android:id="@+id/live_header_layout"
            layout="@layout/player_header"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible"/>

    <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="top"
            android:animateLayoutChanges="true"
            app:auto_show="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/live_header_layout"
            app:resize_mode="fit"
            app:show_buffering="never"
            app:use_controller="false" />

    <ImageView
            android:id="@+id/ivFirstFrame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:animateLayoutChanges="true"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/playerView"
            app:layout_constraintEnd_toEndOf="@id/playerView"
            app:layout_constraintStart_toStartOf="@id/playerView"
            app:layout_constraintTop_toTopOf="@id/playerView" />

    <TextView
            android:id="@+id/ivThanksForWatching"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/ant_dark_transparent"
            android:text="@string/ant_thanks_for_watching"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/ant_white"
            android:fontFamily="@font/roboto_bold"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/playerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/live_header_layout" />

    <com.google.android.exoplayer2.ui.PlayerControlView
            android:id="@+id/controls"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:animateLayoutChanges="true"
            android:elevation="10dp"
            app:auto_show="false"
            app:controller_layout_id="@layout/player_custom_controls_live_video"
            app:hide_on_touch="true"
            app:layout_constraintBottom_toBottomOf="@+id/playerView"
            app:layout_constraintEnd_toEndOf="@id/playerView"
            app:layout_constraintStart_toStartOf="@id/playerView"
            app:layout_constraintTop_toTopOf="@id/playerView" />

    <TextView
            android:id="@+id/txtLabelLive"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_rect_round_3"
            android:backgroundTint="@color/ant_pink"
            android:elevation="10dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/ant_live"
            android:textAllCaps="true"
            android:textColor="@color/ant_white"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/playerView" />

    <TextView
            android:id="@+id/txtNumberOfViewers"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_rect_round_3"
            android:backgroundTint="@color/ant_dark_gray_3_a80"
            android:drawableStart="@drawable/antourage_ic_watcher_16dp"
            android:drawablePadding="4dp"
            android:elevation="10dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:textColor="@color/ant_white"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/txtLabelLive"
            app:layout_constraintTop_toTopOf="@+id/playerView"
            tools:text="6,385" />

    <TextView
            android:id="@+id/tv_live_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="14dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/playerView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/ant_init_time_doubled" />

    <ImageView
            android:id="@+id/ivLoader"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/playerView"
            app:layout_constraintEnd_toEndOf="@id/playerView"
            app:layout_constraintStart_toStartOf="@id/playerView"
            app:layout_constraintTop_toTopOf="@+id/playerView"
            tools:ignore="ContentDescription" />



    <ImageButton
            android:id="@+id/btnShare_vod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/antourage_ic_share_white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playerView"
            tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llPollStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/antourage_rounded_green_bg"
            android:orientation="horizontal"
            android:padding="4dp"
            app:layout_constraintEnd_toStartOf="@id/btnShare_vod"
            app:layout_constraintTop_toBottomOf="@id/playerView">

        <ImageView
                android:id="@+id/ivPollIcon"
                android:layout_width="28dp"
                android:layout_height="20dp"
                android:background="@android:color/transparent"
                android:padding="4dp"
                android:src="@drawable/antourage_ic_poll_white_transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        <TextView
                android:id="@+id/txtPollStatus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintLeft_toRightOf="@+id/ivPollIcon"
                tools:text="@string/ant_new_poll"
                tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
            layout="@layout/layout_poll_suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:importantForAccessibility="yes"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerView" />


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/antourage_rounded_gray_bg"
            android:elevation="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playerView" />

    <com.antourage.weaverlib.other.ui.CustomDrawerLayout
            android:id="@+id/drawerLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintBottom_toTopOf="@+id/ll_wrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerView">

        <com.google.android.material.navigation.NavigationView
                android:id="@+id/navView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginRight="-64dp"
                android:background="@android:color/transparent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clNavView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/llNoChat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                    <include
                            layout="@layout/layout_empty_chat_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.antourage.weaverlib.other.ui.FadingRecyclerView
                        android:id="@+id/rvMessages"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:fadingEdge="horizontal"
                        android:fadingEdgeLength="130dp"
                        android:fillViewport="false"
                        android:requiresFadingEdge="vertical" />

                <include
                        android:id="@+id/bttn_new_comments"
                        layout="@layout/item_new_comments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.navigation.NavigationView>
    </com.antourage.weaverlib.other.ui.CustomDrawerLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_wrapper"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bg_rect_gradient_semidark"
            android:elevation="6dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible">

        <EditText
                android:id="@+id/etMessage"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="10"
                android:background="@drawable/bg_rect_round_stroke_100"
                android:focusable="false"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/ant_say_something"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:maxLength="@integer/ant_max_length_message_input"
                android:paddingStart="16dp"
                android:paddingEnd="60dp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/ant_streamer_name_color"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btnUserSettings"
                tools:ignore="RtlSymmetry" />

        <TextView
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/ant_send"
                android:textColor="@color/ant_green_2"
                android:textSize="12sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/etMessage"

                tools:ignore="ContentDescription"
                tools:visibility="visible" />

        <ImageButton
                android:id="@+id/btnUserSettings"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_button_circle_1"
                android:src="@drawable/antourage_ic_user_settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnShare"
                tools:ignore="ContentDescription" />

        <ImageButton
                android:id="@+id/btnShare"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_button_circle_1"
                android:src="@drawable/antourage_ic_share"
                android:tint="@color/ant_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>